<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Lab 1</string>
    <string name="hello_message">Hello World!</string>
    <string name="ButtonText">I\'m a button</string>
    <string name="Text1">Login</string>
    <string name="Next_Activity">Next Activity</string>
    <string name="button1">Button 1</string>
    <string name="button2">Button 2</string>
    <string name="switch1">Enable Something</string>
    <string name="Lab2Title">Lab2</string>
    <string name="dialog_message">Do you wish to finish this activity?</string>
    <string name="dialog_title">Lab2 Checkbox title</string>
    <string name="ok">ok button</string>
    <string name="cancel">Cancel Button</string>
    <string name="Hint1">UserName</string>
    <string name="Hint2">Password</string>
    <string name="StartChat">Start Chat</string>
    <string name="weatherChat">Weather Chat</string>
    <string name="min">Min</string>
    <string name="max">Man</string>
    <string name="current">Current</string>
    <string name="title_message_list">Messages</string>
    <string name="title_message_detail">Message Detail</string>
    <string name="title_activity_test_toolbar">TestToolbar</string>
    <string name="startMenu">Start Menu Activity</string>
</resources>